# srt-rs

./: .gitignore  Cargo.toml  Dockerfile
libsrt-sys/: build.rs
src/: error.rs  lib.rs  socket.rs
